--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,8 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          <div align="center">
+ ![Snake animation](https://github.com/minoru-yamanaka/minoru-yamanaka/blob/output/github-contribution-grid-snake.svg)
+ 
+</div>
